data/derived/fa15/progs/unify/prog2458.ml.out
Characters 27-65:
  let stringOfList f l = "["^List.map (fun t -> sepConcat "; " l) l^"]";;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type string
